--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <h2 class="masthead-subheading font-weight-light mb-0">Anything computerwise that you need done <br> We can do</h2>
+                <h2 class="Web development affordable and fast</h2>
             </div>
         </header>
         </i>
